--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "js-asserts",
-    "version": "1.0.3",
+    "version": "1.0.7",
     "description": "assertions for node and browser",
     "main": "./dist/index.js",
     "scripts": {
@@ -13,12 +13,13 @@
         "@babel/preset-env": "^7.4.1",
         "rollup": "^1.7.0",
         "rollup-plugin-babel": "^4.3.2",
+        "rollup-plugin-clear": "^2.0.7",
+        "rollup-plugin-copy": "^0.2.3",
         "rollup-plugin-node-resolve": "^4.0.1",
         "rollup-plugin-progress": "^1.1.1",
         "rollup-plugin-strip": "^1.2.1",
         "rollup-plugin-terser": "^4.0.4"
     },
-    "dependencies": {},
     "repository": {
         "type": "git",
         "url": "git+https://github.com/DasRed/js-asserts.git"
