--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "js-asserts",
-    "version": "1.0.10",
+    "version": "1.0.12",
     "description": "assertions for node and browser",
     "main": "./dist/index.js",
     "scripts": {
-        "build": "rollup -c"
+        "build": "rollup -c",
+        "prepublishOnly": "npm run build"
     },
     "devDependencies": {
         "@babel/core": "^7.4.0",
@@ -48,6 +49,12 @@
         "sanitisation",
         "sanitise",
         "check",
-        "checking"
+        "checking",
+        "es6 module assert",
+        "es6 module asserts",
+        "esm assert",
+        "esm asserts",
+        "mjs assert",
+        "mjs asserts"
     ]
 }
