--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
     "name": "js-asserts",
-    "version": "1.0.15",
+    "version": "1.0.16",
     "description": "assertions for node and browser",
     "main": "./dist/index.js",
     "scripts": {
         "build": "rollup -c",
         "prepublishOnly": "npm run build"
     },
+    "files": [
+        "/dist/*",
+        "/src/*"
+    ],
     "devDependencies": {
-        "@babel/core": "^7.4.3",
-        "@babel/plugin-transform-runtime": "^7.4.3",
-        "@babel/polyfill": "^7.4.3",
-        "@babel/preset-env": "^7.4.3",
-        "rollup": "^1.8.0",
-        "rollup-plugin-babel": "^4.3.2",
+        "@babel/core": "^7.9.0",
+        "@babel/preset-env": "^7.9.5",
+        "@rollup/plugin-node-resolve": "^7.1.3",
+        "core-js": "^3.6.5",
+        "rollup": "^2.7.2",
+        "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-clear": "^2.0.7",
-        "rollup-plugin-node-resolve": "^4.0.1",
-        "rollup-plugin-progress": "^1.1.1",
-        "rollup-plugin-strip": "^1.2.1",
-        "rollup-plugin-terser": "^4.0.4"
+        "rollup-plugin-strip": "^1.2.2",
+        "rollup-plugin-terser": "^5.3.0"
     },
     "repository": {
         "type": "git",
@@ -56,5 +58,6 @@
         "esm asserts",
         "mjs assert",
         "mjs asserts"
-    ]
+    ],
+    "dependencies": {}
 }
