--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "js-asserts",
-    "version": "1.0.16",
+    "version": "1.0.17",
     "description": "assertions for node and browser",
     "main": "./dist/index.js",
     "scripts": {
@@ -15,11 +15,11 @@
         "@babel/core": "^7.9.0",
         "@babel/preset-env": "^7.9.5",
         "@rollup/plugin-node-resolve": "^7.1.3",
+        "@rollup/plugin-strip": "^1.3.2",
         "core-js": "^3.6.5",
         "rollup": "^2.7.2",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-clear": "^2.0.7",
-        "rollup-plugin-strip": "^1.2.2",
         "rollup-plugin-terser": "^5.3.0"
     },
     "repository": {
